--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,59 +1,64 @@
-html {
-  box-sizing: border-box;
-}
+// html {
+//   box-sizing: border-box;
+// }
 
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-  margin: 0;
-  padding: 0;
-}
+// *,
+// *::before,
+// *::after {
+//   box-sizing: inherit;
+//   margin: 0;
+//   padding: 0;
+// }
 
-.playground {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 600px;
-  background-color: #1e1e2c;
-}
+// .playground {
+//   position: fixed;
+//   top: 0;
+//   bottom: 0;
+//   left: 0;
+//   width: 600px;
+//   background-color: #1e1e2c;
+// }
 
-.code-editor {
-  // height: 33.33%;
-  overflow: hidden;
-  position: relative;
-}
+// .code-editor {
+//   // height: 33.33%;
+//   overflow: hidden;
+//   position: relative;
+// }
 
-.editor-header {
-  height: 30px;
-  content: attr(title);
-  display: flex;
-  align-items: center;
-  padding-left: 20px;
-  font-size: 18px;
-  color: #fafafa;
-}
+// .editor-header {
+//   height: 30px;
+//   content: attr(title);
+//   display: flex;
+//   align-items: center;
+//   padding-left: 20px;
+//   font-size: 18px;
+//   color: #fafafa;
+// }
 
-.react-codemirror2 {
-  max-height: calc(100% - 30px);
-  // overflow: auto;
-  height: 500px;
-}
-.CodeMirror {
-  min-height: 100%;
-}
+// .react-codemirror2 {
+//   max-height: calc(100% - 30px);
+//   // overflow: auto;
+//   height: 500px;
+// }
+// .CodeMirror {
+//   min-height: 100%;
+// }
 
-.result {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 600px;
-  overflow: hidden;
-}
+// .result {
+//   position: fixed;
+//   top: 0;
+//   right: 0;
+//   bottom: 0;
+//   left: 600px;
+//   overflow: hidden;
+// }
 
-.iframe {
-  width: 100%;
-  height: 100%;
+// .iframe {
+//   width: 100%;
+//   height: 100%;
+// }
+
+.styled-background {
+  color: blue;
+  background-color: yellow;
 }
