--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,64 +1,58 @@
-// html {
-//   box-sizing: border-box;
-// }
+.wrap-list-comment {
+  .list-comment {
+    height: 350px;
+  }
+  .wrap-box-comment {
+    margin-left: 25px;
 
-// *,
-// *::before,
-// *::after {
-//   box-sizing: inherit;
-//   margin: 0;
-//   padding: 0;
-// }
+    .btn-commit-comment {
+      margin-top: 10px;
+      float: right;
+      line-height: 30px;
+    }
+  }
 
-// .playground {
-//   position: fixed;
-//   top: 0;
-//   bottom: 0;
-//   left: 0;
-//   width: 600px;
-//   background-color: #1e1e2c;
-// }
+  #commentTextAread {
+    max-width: 305px;
+  }
+}
 
-// .code-editor {
-//   // height: 33.33%;
-//   overflow: hidden;
-//   position: relative;
-// }
+.wrap-update-delete {
+  position: absolute;
+  right: 0px;
+  .btn-edit-comment {
+    margin-right: 10px;
+  }
+}
 
-// .editor-header {
-//   height: 30px;
-//   content: attr(title);
-//   display: flex;
-//   align-items: center;
-//   padding-left: 20px;
-//   font-size: 18px;
-//   color: #fafafa;
-// }
+.wrap-edit-comment-area {
+  margin-top: 10px;
+  margin-bottom: -10px;
+  .btn-edit-comment {
+    margin-top: 5px;
+    line-height: 20px;
+    float: right;
+    margin-right: 10px;
+    width: 45px;
+  }
+  .btn-cancel-comment {
+    right: 5px;
+    margin-top: 5px;
+    line-height: 20px;
+    float: right;
+    margin-right: 22px;
+  }
+}
 
-// .react-codemirror2 {
-//   max-height: calc(100% - 30px);
-//   // overflow: auto;
-//   height: 500px;
-// }
-// .CodeMirror {
-//   min-height: 100%;
-// }
-
-// .result {
-//   position: fixed;
-//   top: 0;
-//   right: 0;
-//   bottom: 0;
-//   left: 600px;
-//   overflow: hidden;
-// }
-
-// .iframe {
-//   width: 100%;
-//   height: 100%;
-// }
+.CodeMirror {
+  height: 89vh !important;
+}
 
 .styled-background {
   color: blue;
   background-color: yellow;
+}
+
+.selected-comment {
+  background-color: blue !important;
 }
