implement delete ex

--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -1,6 +1,7 @@
 .Profile {
   margin-top: 10px;
   font-family: Roboto, Arial, sans-serif;
+  width: 100%;
   .information {
     border: solid 1px #dadce0;
     padding-left: 20px;
