--- a/src/components/SignUp/SignUp.scss
+++ b/src/components/SignUp/SignUp.scss
@@ -6,3 +6,15 @@
   font-size: 16px;
   color: red;
 }
+
+.select-role-sign-up {
+  width: 100%;
+  height: 34px;
+}
+
+#role {
+  font-size: 16px;
+  option {
+    height: 50px !important;
+  }
+}
