Complete login facebook, google.

--- a/src/components/SignIn/SignIn.scss
+++ b/src/components/SignIn/SignIn.scss
@@ -21,10 +21,7 @@
     width: 100%;
     button {
       width: 100%;
+      line-height: 5px;
     }
   }
 }
-// .btn-facebook-login {
-//   width: 100%;
-//   justify-content: center;
-// }
