--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,60 +1,59 @@
 .App {
   width: 100%;
-  height: 100%;
-}
-.wrap-list-comment {
-  .list-comment {
-    height: 350px;
-  }
-  .wrap-box-comment {
-    margin-left: 25px;
+  .wrap-list-comment {
+    .list-comment {
+      height: 100%;
+    }
+    .wrap-box-comment {
+      margin-left: 25px;
+      margin-top: 15px;
+      .btn-commit-comment {
+        float: right;
+      }
+    }
 
-    .btn-commit-comment {
-      float: right;
+    #commentTextAread {
+      width: 100%;
     }
   }
 
-  #commentTextAread {
-    max-width: 305px;
+  .wrap-update-delete {
+    position: absolute;
+    right: 0px;
+    .btn-edit-comment {
+      margin-right: 10px;
+    }
   }
-}
 
-.wrap-update-delete {
-  position: absolute;
-  right: 0px;
-  .btn-edit-comment {
-    margin-right: 10px;
+  .wrap-edit-comment-area {
+    margin-top: 10px;
+    margin-bottom: -10px;
+    .btn-edit-comment {
+      margin-top: 5px;
+      line-height: 20px;
+      float: right;
+      margin-right: 10px;
+      width: 45px;
+    }
+    .btn-cancel-comment {
+      right: 5px;
+      margin-top: 5px;
+      line-height: 20px;
+      float: right;
+      margin-right: 22px;
+    }
   }
-}
 
-.wrap-edit-comment-area {
-  margin-top: 10px;
-  margin-bottom: -10px;
-  .btn-edit-comment {
-    margin-top: 5px;
-    line-height: 20px;
-    float: right;
-    margin-right: 10px;
-    width: 45px;
+  .CodeMirror {
+    height: 85vh !important;
   }
-  .btn-cancel-comment {
-    right: 5px;
-    margin-top: 5px;
-    line-height: 20px;
-    float: right;
-    margin-right: 22px;
+
+  .styled-background {
+    color: black !important;
+    background-color: white;
   }
-}
 
-.CodeMirror {
-  height: 89vh !important;
-}
-
-.styled-background {
-  color: blue;
-  background-color: yellow;
-}
-
-.selected-comment {
-  background-color: blue !important;
+  .selected-comment {
+    background-color: blue !important;
+  }
 }
