Modify content comment in list comment with break line.

--- a/src/components/Home/ListComment/ListComment.scss
+++ b/src/components/Home/ListComment/ListComment.scss
@@ -15,3 +15,10 @@
     background-color: "blue";
   }
 }
+.defaultTextAreaComment {
+  margin-left: 10px;
+  border: none;
+  background-color: transparent;
+  resize: none;
+  outline: none;
+}
