Fix font-family in comment codemirror. Add description list file.

--- a/src/components/Home/ListComment/ListComment.scss
+++ b/src/components/Home/ListComment/ListComment.scss
@@ -21,4 +21,6 @@
   background-color: transparent;
   resize: none;
   outline: none;
+  font-family: "Roboto, Hevitica, Arial, sans-serif";
+  font-size: 17px;
 }
